Menambahkan efek ketika melakukan hover pada cards di halaman utama todolist

--- a/todolist/templates/create_task.html
+++ b/todolist/templates/create_task.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block meta %}
+<title>Buat Task</title>
+{% endblock meta %}
+
 {% block content %}
 <nav class="navbar navbar-dark navbar-expand-lg bg-primary">
     <div class="container-fluid">
