--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -25,6 +25,43 @@
       type: "GET",
       success: function(result) {
         console.log(result)
+        var openingDiv = '<div class="container-fluid d-flex flex-wrap justify-content-center">'
+        var closingDiv = '</div>'
+
+        var htmlString = openingDiv
+
+        for (let index = 0; index < result.length; index++) {
+          var task = result[index].fields;
+          var pk = result[index].pk
+
+          if (task.is_finished) {
+            htmlString += `
+            <div class="card text-bg-success m-3 done" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">${task.title}</h5>
+                <h6 class="card-subtitle mb-2">${task.date}</h6>
+                <h6 class="card-subtitle mb-2">Selesai</h6>
+                <p class="card-text">${task.description}</p>
+              </div>
+            </div>
+            `
+          } else {
+            htmlString += `
+            <div class="card text-bg-danger m-3 undone" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">${task.title}</h5>
+                <h6 class="card-subtitle mb-2">${task.date}</h6>
+                <h6 class="card-subtitle mb-2">Belum Selesai</h6>
+                <p class="card-text">${task.description}</p>
+              </div>
+            </div>
+            `
+          }
+        }
+
+        htmlString += "\n" + closingDiv;
+
+        $("div.todolist-card").append(htmlString)          
       }
     })
   })
@@ -64,7 +101,9 @@
 <hr>
 
 <h2 class="text-center m-2">Task</h2>
-<div class="container-fluid d-flex flex-wrap justify-content-center">
+<div class="todolist-card"></div>
+
+<!-- <div class="container-fluid d-flex flex-wrap justify-content-center">
     {% comment %} Add the data below this line {% endcomment %}
     {% for task in data_task %}
     {% if task.is_finished %}
@@ -92,7 +131,7 @@
 
     {% endif %}
     {% endfor %}
-  </div>
+  </div> -->
 
   <div class="d-grid gap-2 col-6 mx-auto my-3">
     <button class="btn btn-success"><a href="{% url 'todolist:create_task' %}" class="link-light">Tambah Task Baru</a></button>
