--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -96,8 +96,6 @@
                   }
                   
           $("div#todolist-card").append(htmlString)
-           
-          alert("Item telah ditambahkan")
         }
       })      
     }
@@ -197,8 +195,7 @@
               </table>  
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-success">Add</button>
+              <button type="submit" class="btn btn-success" data-bs-dismiss="modal">Add</button>
             </form>
           </div>
         </div>
